# GearAI

./: .gitignore  CLAUDE.md  ChatGPT.py  Default.GD1  JupyTest.ipynb  LangchainTest.py  MASTA_Try1.ipynb  MCP_Server_Youtube.py  SmartJsonSearch.md  SmartJsonSearch.py  app.py  gear_design_manager.py  mcp.json  pyproject.toml  requirements.txt  test.py  test_latex.py  test_optimized.py  utils2.py
agents/: GearDesign_agent.py  __init__.py  base_agent.py  deep_research_agent.py  gpt_agent.py  test.py
agents/data/schema/: Default.json
config/: agent_config.py
services/: __init__.py  agent_service.py
utils/: __init__.py  llm.py  prompt_chain.py
