[project]
name = "streamlit-ai-agent"
version = "0.1.0"
description = "Streamlit AI agent application with MCP and Deep Research modules"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.28.0",
    "openai>=1.3.0",
    "python-dotenv>=1.0.0",
    "asyncio>=3.4.3",
    "typing-extensions>=4.5.0",
    "firecrawl-py",
    "mcp",
    "openai-agents",
    "youtube-transcript-api",
    "nest-asyncio",
    "pythonnet",
    "langchain-openai>=0.3.31",
    "langchain-core>=0.3.74",
    "langgraph>=0.6.6",
    "langchain-teddynote>=0.4.4",
    "ipython>=8.37.0",
    "langchain-anthropic>=0.3.19",
    "langchain-google-genai>=2.1.9",
    "langchain-community>=0.3.27",
    "jq>=1.10.0",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.27.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
